# routes/api/customers/auth.php
@@ -1,8 +1,8 @@
 <?php
 
-use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\Customers\AuthController;
 use App\Http\Controllers\Api\Customers\SocialAuthController;
+use Illuminate\Support\Facades\Route;
 
 Route::post('login', [AuthController::class, 'login']);
 Route::post('register', [AuthController::class, 'register']);
@@ -11,6 +11,7 @@ Route::post('social-register', [SocialAuthController::class, 'socialRegister']);
 Route::post('forgot-password', [AuthController::class, 'forgotPassword']);
 Route::post('reset-password', [AuthController::class, 'resetPassword'])->name('password.reset');
 Route::post('activate-account', [AuthController::class, 'activateAccount']);
+Route::post('resend-activation-otp', [AuthController::class, 'resendActivationOtp']);
 Route::put('update', [AuthController::class, 'update']);
 // protected routes
 Route::middleware('auth:sanctum')->group(function () {
